wip: merger dataset with weather

--- a/.devcontainer/notebooks/eda/eda-bids/merger.ipynb
+++ b/.devcontainer/notebooks/eda/eda-bids/merger.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,8 @@
    "source": [
     "bangkok = pd.concat([bangkok_2014, bangkok_2015, bangkok_2016, bangkok_2017, bangkok_2018, bangkok_2019, bangkok_2020, bangkok_2021, bangkok_2022, bangkok_2023])\n",
     "bangkok['location'] = 'bangkok-air-quality'\n",
-    "bangkok"
+    "bangkok\n",
+    "location = ['']"
    ]
   },
   {
@@ -856,7 +857,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "['bansomdejchaopraya-rajabhat university, bangkok-air-quality']"
+   ]
   }
  ],
  "metadata": {
